--- a/_config.yml
+++ b/_config.yml
@@ -32,4 +32,4 @@ kramdown:
   hard_wrap: false
 
 gems: ['jekyll-paginate']
-exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'LICENSE']
+exclude: ['README.md', 'Gemfile', 'Gemfile.lock', 'LICENSE', 'vendor']
